--- a/Angular-Components/UpSkillUi/angular.json
+++ b/Angular-Components/UpSkillUi/angular.json
@@ -27,7 +27,9 @@
               "node_modules/bootstrap/dist/css/bootstrap.css"
               
             ],
-            "scripts": []
+            "scripts": [
+              
+            ]
           },
           "configurations": {
             "production": {
