--- a/Angular-Components/UpSkillUi/angular.json
+++ b/Angular-Components/UpSkillUi/angular.json
@@ -24,7 +24,10 @@
             ],
             "styles": [
               "src/styles.css",
-              "node_modules/bootstrap/dist/css/bootstrap.css"
+              "node_modules/bootstrap/dist/css/bootstrap.css",
+              "./node_modules/primeicons/primeicons.css",
+"./node_modules/primeng/resources/themes/arya-purple/theme.css",
+"./node_modules/primeng/resources/primeng.min.css"
               
             ],
             "scripts": [
