Update azure-pipelines-4.yml for Azure Pipelines

--- a/azure-pipelines-4.yml
+++ b/azure-pipelines-4.yml
@@ -19,5 +19,5 @@ steps:
     cd Angular-Components/UpSkillUi
     npm install -g @angular/cli --force
     npm install --force
-    ng build --prod --force
+    ng build --prod 
   displayName: 'npm install and build'
